#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(ufitoolbox, 0.9.4)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([ufi_format.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
# AC_CHECK_LIB(ext2fs, ext2fs_check_if_mounted,,
#    AC_MSG_ERROR([ext2fs:ext2fs_check_if_mounted not found]))

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h stdlib.h string.h sys/ioctl.h sys/param.h unistd.h],,
    AC_MSG_ERROR([system headers not found]))
#AC_CHECK_HEADER([ext2fs/ext2fs.h],,
#    AC_MSG_ERROR([ext2fs:ext2fs/ext2fs.h not found]))

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_CHECK_MEMBERS([struct stat.st_rdev],,
    AC_MSG_ERROR([struct stat.st_rdev not found]))

# Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_HEADER_MAJOR
AC_FUNC_MALLOC
AC_FUNC_STAT
AC_CHECK_FUNCS([memset strdup],, AC_MSG_ERROR([system functions not found]))

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
