
bin_PROGRAMS = iDSK
iDSK_SOURCES = Basic.cpp Basic.h BitmapCPC.cpp BitmapCPC.h Dams.cpp Dams.h Desass.cpp Desass.h GestDsk.cpp GestDsk.h Itoa.cpp Itoa.h Main.cpp Main.h MyType.h Outils.cpp Outils.h ViewFile.cpp ViewFile.h endianPPC.cpp endianPPC.h getopt_pp.h getopt_pp.cpp 
iDSK_LDADD =  
iDSK_CFLAGS = -Wall -g3 -O3 

