noinst_LIBRARIES = libcapricecore.a

libcapricecore_a_CPPFLAGS=$(SDL_CFLAGS) 
libcapricecore_a_SOURCES = \
		  audio.cpp \
		  emulator.cpp \
		  input.cpp \
		  ppi.cpp \
		  renderData.cpp \
		  tape.cpp \
		  z80.cpp \
		  crtc.cpp \
		  fdc.cpp \
          gatearray.cpp \
		  ioport.cpp \
		  psg.cpp \
		  rom_mods.cpp \
		  vdu.cpp \
		  zip.cpp \
		  config.cpp \
		  dsk.cpp \
		  filetools.cpp \
		  memory.cpp \
		  render.cpp \
          snapshot.cpp \
		  audio.h \
		  config.h \
		  debug.h \
		  error.h \
		  glfuncs.h \
		  memory.h \
		  render.h \
		  tape.h \
		  z80daa.h \
		  cap32.h \
		  dsk.h \
		  fdc.h \
		  gatearray.h \
		  input.h \
		  ppi.h \
		  rom_mods.h \
		  vdu.h \
		  z80.h \
		  cap32type.h \
		  crtc.h \
		  emulator.h \
          filetools.h  \
		  ioport.h \
		  psg.h \
		  snapshot.h \
		  video.h \
		  zip.h \
		  YmTypes.h \
		  glfunclist.h  \
		  glfuncs.cpp  \
		glfuncs.h \
		fileutils.h \
		fileutils.cpp \
	 	c_inifile.cpp \
		c_inifile.h


